Fixed horizontal scroll category list - sticky header

--- a/frontend-pos/src/app/features/products/category-list/category-list.component.scss
+++ b/frontend-pos/src/app/features/products/category-list/category-list.component.scss
@@ -22,14 +22,20 @@
 button.category-button {
   color: $green-medium;
   min-width: fit-content;
-  background-color: $white;
+  background: $white;
   margin: 0 5px;
   box-shadow: 1px 1px 5px 0 $gray-lighter;
   font-weight: bold;
 
   &.active, &.all {
     color: $white;
-    background-color: $green-medium;
+    background: $green-medium;
+  }
+
+  &.active {
+    position: sticky;
+    left: 0;
+    z-index: 2;
   }
 
   &.all {
